--- a/index.html
+++ b/index.html
@@ -30,37 +30,38 @@
     <button onclick="checkServers()">Проверить серверы</button>
 
     <script>
-        function checkServer(url) {
-            return fetch(url, { mode: 'no-cors' })
-                .then(response => response.ok)
-                .catch(error => false);
+        function checkServer(url, callback) {
+            const img = new Image();
+            img.onload = function() { callback(true); };
+            img.onerror = function() { callback(false); };
+            img.src = url + "/favicon.ico?" + new Date().getTime();
         }
 
-        async function checkServers() {
-            const server1 = "https://cloud.itmsft.net/";
-            const server2 = "https://reserve.itmsft.net/";
+        function checkServers() {
+            const server1 = "https://cloud.itmsft.net";
+            const server2 = "https://reserve.itmsft.net";
 
-            const server1Status = await checkServer(server1);
-            const server2Status = await checkServer(server2);
+            checkServer(server1, function(isOnline) {
+                const server1Indicator = document.getElementById("server1Status");
+                if (isOnline) {
+                    server1Indicator.classList.remove("gray");
+                    server1Indicator.classList.add("green");
+                } else {
+                    server1Indicator.classList.remove("green");
+                    server1Indicator.classList.add("gray");
+                }
+            });
 
-            const server1Indicator = document.getElementById("server1Status");
-            const server2Indicator = document.getElementById("server2Status");
-
-            if (server1Status) {
-                server1Indicator.classList.remove("gray");
-                server1Indicator.classList.add("green");
-            } else {
-                server1Indicator.classList.remove("green");
-                server1Indicator.classList.add("gray");
-            }
-
-            if (server2Status) {
-                server2Indicator.classList.remove("gray");
-                server2Indicator.classList.add("green");
-            } else {
-                server2Indicator.classList.remove("green");
-                server2Indicator.classList.add("gray");
-            }
+            checkServer(server2, function(isOnline) {
+                const server2Indicator = document.getElementById("server2Status");
+                if (isOnline) {
+                    server2Indicator.classList.remove("gray");
+                    server2Indicator.classList.add("green");
+                } else {
+                    server2Indicator.classList.remove("green");
+                    server2Indicator.classList.add("gray");
+                }
+            });
         }
     </script>
 </body>
