--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Status</title>
     <style>
-        .status-container {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-        }
         .status-indicator {
             width: 20px;
             height: 20px;
             border-radius: 50%;
             display: inline-block;
-            margin-right: 10px;
         }
         .green {
             background-color: green;
@@ -24,35 +18,52 @@
             background-color: gray;
         }
         .sync-status {
-            margin-left: 10px;
             font-weight: bold;
             color: blue;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        td, th {
+            padding: 10px;
+            text-align: left;
         }
     </style>
 </head>
 <body>
-    <div class="status-container">
-        <span>Инфраструктура:</span>
-        <span id="server1Status" class="status-indicator gray"></span>
-    </div>
-    <div class="status-container">
-        <span>Биллинг:</span>
-        <span id="server2Status" class="status-indicator gray"></span>
-    </div>
-    <div class="status-container">
-        <span>Телефония:</span>
-        <span id="server3Status" class="status-indicator gray"></span>
-    </div>
-    <div class="status-container">
-        <span>ЦОД Основной:</span>
-        <span id="server4Status" class="status-indicator gray"></span>
-        <span id="syncStatus1" class="sync-status"></span>
-    </div>
-    <div class="status-container">
-        <span>ЦОД Резервный:</span>
-        <span id="server5Status" class="status-indicator gray"></span>
-        <span id="syncStatus2" class="sync-status"></span>
-    </div>
+    <table>
+        <tr>
+            <th>Сервис</th>
+            <th>Статус</th>
+            <th>Синхронизация</th>
+        </tr>
+        <tr>
+            <td>Инфраструктура</td>
+            <td><span id="server1Status" class="status-indicator gray"></span></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Биллинг</td>
+            <td><span id="server2Status" class="status-indicator gray"></span></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Телефония</td>
+            <td><span id="server3Status" class="status-indicator gray"></span></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ЦОД Основной</td>
+            <td><span id="server4Status" class="status-indicator gray"></span></td>
+            <td><span id="syncStatus1" class="sync-status"></span></td>
+        </tr>
+        <tr>
+            <td>ЦОД Резервный</td>
+            <td><span id="server5Status" class="status-indicator gray"></span></td>
+            <td><span id="syncStatus2" class="sync-status"></span></td>
+        </tr>
+    </table>
 
     <script>
         function checkServer(url, callback) {
