--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         function checkServers() {
             const servers = [
                 { url: "https://itmsft.com", elementId: "server1Status" },
-                { url: "https://itmsft.com/", elementId: "server2Status" },
+                { url: "https://itmsft.com", elementId: "server2Status" },
                 { url: "https://cloud.itmsft.net", elementId: "server3Status" },
                 { url: "https://cloud.itmsft.net", elementId: "server4Status", syncElementId: "syncStatus1" },
                 { url: "https://reserve.itmsft.net", elementId: "server5Status", syncElementId: "syncStatus2" }
