--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
         <tr>
             <td>Статус сервера:</td>
             <td>
-                Основной: <span id="mainServerIndicator" class="status-indicator gray"></span><br>
-                Резервный: <span id="reserveServerIndicator" class="status-indicator gray"></span>
+                <table>
+                    <tr>
+                        <td>Основной:</td>
+                        <td><span id="mainServerIndicator" class="status-indicator gray"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Резервный:</td>
+                        <td><span id="reserveServerIndicator" class="status-indicator gray"></span></td>
+                    </tr>
+                </table>
             </td>
         </tr>
         <tr>
