--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <th>Состояние</th>
         </tr>
         <tr>
-            <td>Статус сервера:</td>
+            <td>Репликация:</td>
             <td>
                 <table>
                     <tr>
