--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <th>Состояние</th>
         </tr>
         <tr>
-            <td>Репликация:</td>
+            <td>Статус:</td>
             <td>
                 <table>
                     <tr>
@@ -54,7 +54,7 @@
             </td>
         </tr>
         <tr>
-            <td>Статус синхронизации:</td>
+            <td>Репликация:</td>
             <td id="syncStatus">Неизвестно</td>
         </tr>
     </table>
