--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             padding: 10px;
             text-align: left;
         }
+        .refresh-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -58,6 +64,8 @@
             <td id="syncStatus">Неизвестно</td>
         </tr>
     </table>
+    
+    <button class="refresh-button" onclick="refreshPage()">Обновить</button>
 
     <script>
         function checkServer(url, callback) {
@@ -108,6 +116,10 @@
             } else {
                 syncStatus.textContent = "Неизвестно";
             }
+        }
+
+        function refreshPage() {
+            location.reload();
         }
 
         // Запуск проверки при загрузке страницы
