--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="background"></div>
+    <div class="background">
+        <video autoplay muted loop id="bg-video">
+            <source src="https://github.githubassets.com/assets/globe-500.hevc-42032a395ff1.mp4" type="video/mp4">
+        </video>
+    </div>
     <div class="container mt-5">
         <div class="row mb-3">
             <div class="col-md-4">
