--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Styled Page</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="stylebootstrap.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="background">
         <video autoplay muted loop id="bg-video">
-            <source src="https://github.githubassets.com/assets/globe-500.hevc-42032a395ff1.mp4" type="video/mp4">
+            <source src="bgvideo.mp4" type="video/mp4">
+            Ваш браузер не поддерживает тег видео.
         </video>
     </div>
     <div class="container mt-5">
