--- a/index.html
+++ b/index.html
@@ -14,42 +14,44 @@
             Ваш браузер не поддерживает тег видео.
         </video>
     </div>
-    <div class="container mt-5">
-        <div class="row mb-3">
-            <div class="col-md-4">
-                <div class="translucent-box">
-                    <pre><code>Terminal-like text here</code></pre>
+    <div class="content">
+        <div class="container mt-5">
+            <div class="row mb-3">
+                <div class="col-md-4">
+                    <div class="translucent-box">
+                        <pre><code>Terminal-like text here</code></pre>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="translucent-box">
+                        <pre><code>Terminal-like text here</code></pre>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="translucent-box">
+                        <pre><code>Terminal-like text here</code></pre>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="translucent-box">
-                    <pre><code>Terminal-like text here</code></pre>
+            <div class="row mb-3">
+                <div class="col-12">
+                    <div class="translucent-box large-box">
+                        <button type="button" class="btn btn-primary m-2">Button 1</button>
+                        <button type="button" class="btn btn-secondary m-2">Button 2</button>
+                        <button type="button" class="btn btn-success m-2">Button 3</button>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="translucent-box">
-                    <pre><code>Terminal-like text here</code></pre>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="translucent-box">
+                        <pre><code>Terminal-like text here</code></pre>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-12">
-                <div class="translucent-box large-box">
-                    <button type="button" class="btn btn-primary m-2">Button 1</button>
-                    <button type="button" class="btn btn-secondary m-2">Button 2</button>
-                    <button type="button" class="btn btn-success m-2">Button 3</button>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="translucent-box">
-                    <pre><code>Terminal-like text here</code></pre>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="translucent-box">
-                    <pre><code>Terminal-like text here</code></pre>
+                <div class="col-md-6">
+                    <div class="translucent-box">
+                        <pre><code>Terminal-like text here</code></pre>
+                    </div>
                 </div>
             </div>
         </div>
