До того, как сделать +2 поля

--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
             <div class="row mb-3">
                 <div class="col-md-4">
                     <div class="translucent-box">
+                        <h3 class="box-title">Title 1</h3>
                         <pre><code>Terminal-like text here</code></pre>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="translucent-box">
+                        <h3 class="box-title">Title 2</h3>
                         <pre><code>Terminal-like text here</code></pre>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="translucent-box">
+                        <h3 class="box-title">Title 3</h3>
                         <pre><code>Terminal-like text here</code></pre>
                     </div>
                 </div>
@@ -36,20 +39,25 @@
             <div class="row mb-3">
                 <div class="col-12">
                     <div class="translucent-box large-box">
-                        <button type="button" class="btn btn-primary m-2">Button 1</button>
-                        <button type="button" class="btn btn-secondary m-2">Button 2</button>
-                        <button type="button" class="btn btn-success m-2">Button 3</button>
+                        <h3 class="box-title">Large Box Title</h3>
+                        <div class="button-group">
+                            <button type="button" class="btn btn-primary m-2">Button 1</button>
+                            <button type="button" class="btn btn-secondary m-2">Button 2</button>
+                            <button type="button" class="btn btn-success m-2">Button 3</button>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="translucent-box">
+                        <h3 class="box-title">Title 4</h3>
                         <pre><code>Terminal-like text here</code></pre>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="translucent-box">
+                        <h3 class="box-title">Title 5</h3>
                         <pre><code>Terminal-like text here</code></pre>
                     </div>
                 </div>
