--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <div class="content">
         <div class="container mt-5">
             <div class="row mb-3">
+                <div class="col-md-2">
+                    <div class="translucent-box small-box">
+                        <h3 class="box-title">Logo</h3>
+                        <!-- Логотип -->
+                    </div>
+                </div>
+                <div class="col-md-2 offset-md-8">
+                    <div class="translucent-box small-box">
+                        <h3 class="box-title">Language</h3>
+                        <!-- Селекторы выбора языка или другие элементы -->
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-3">
                 <div class="col-md-4">
                     <div class="translucent-box">
                         <h3 class="box-title">Title 1</h3>
