Без контента-финал

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <div class="content">
         <div class="container mt-5">
             <div class="row mb-3">
-                <div class="col-md-2">
+                <div class="col-md-auto">
                     <div class="translucent-box small-box">
-                        <h3 class="box-title">Logo</h3>
-                        <!-- Логотип -->
+                        <h3 class="box-title">
+                            <span class="logo-part1">ITMSFT Group</span> | 
+                            <span class="logo-part2">Support</span>
+                        </h3>
                     </div>
                 </div>
-                <div class="col-md-2 offset-md-8">
+                <div class="col-md-auto ml-auto">
                     <div class="translucent-box small-box">
                         <h3 class="box-title">Language</h3>
                         <!-- Селекторы выбора языка или другие элементы -->
