Добавлен блок контактов

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GitHub Styled Page</title>
     <link href="stylebootstrap.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="background">
@@ -35,8 +36,17 @@
             <div class="row mb-3">
                 <div class="col-md-4">
                     <div class="translucent-box">
-                        <h3 class="box-title">Title 1</h3>
-                        <pre><code>Terminal-like text here</code></pre>
+                        <h3 class="box-title">Контакты поддержки</h3>
+                        <pre><code>
+<span class="terminal-text yellow">Телефон: <a class="yellow" href="tel:+380487063848">+38 (048) 706-38-48</a></span>
+<span class="terminal-text yellow">Резервная линия: <a class="yellow" href="tel:+380487016551">+38 (048) 701-65-51</a></span>
+<span class="terminal-text red">Email: <a class="red" href="mailto:support@itmsft.net">support@itmsft.net</a></span>
+                        </code></pre>
+                        <div class="messenger-icons">
+                            <a href="https://t.me/itmsft_bot" class="messenger-icon"><i class="fab fa-telegram-plane"></i></a>
+                            <a href="viber://pa?chatURI=itmsft" class="messenger-icon"><i class="fab fa-viber"></i></a>
+                            <a href="https://www.facebook.com/messages/t/itmsftgroup" class="messenger-icon"><i class="fab fa-facebook-messenger"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
